feat: remove activity meeting
